# arc-agent-squad

./: .editorconfig  .envrc  .gitignore  Dockerfile  Makefile  README.md  README_HIERARCHICAL_ROUTING.md  activate.sh  activate_env.sh  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test_runner.py
.claude/: settings.local.json
.cursor/rules/: cursor_rules.mdc  dev_workflow.mdc  main.mdc  self_improve.mdc  taskmaster.mdc
.roo/rules/: main.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
config/: agent-schema.json
config/agents/: README.md  analytical_risk_expert.yaml  analytical_risk_expert_advanced.yaml  analytical_risk_expert_executive.yaml  authoritative_compliance.yaml  authoritative_compliance_advanced.yaml  authoritative_compliance_executive.yaml  empathetic_interviewer.yaml  empathetic_interviewer_advanced.yaml  empathetic_interviewer_executive.yaml  strategic_governance.yaml  strategic_governance_advanced.yaml  strategic_governance_executive.yaml  supervisor_grc.yaml
config/common/: communication_formats.yaml  tools.yaml  use_cases.yaml
config/squad_configurations/: grc_basic.yaml
docs/: TESTING.md  TESTING_STRATEGY.md
docs/grc-squad/: diligent.css  presentation.md  presentation.sh
infrastructure/: app.py  requirements.txt
infrastructure/stacks/: grc_agent_stack.py  voice_agent_stack.py
scripts/: check_lex_bot.sh  create_lex_bot.sh  ensure_lex_bot.sh  exchange_highbond_token.py
src/: main.py
src/agents/: README.md  agent_config_loader.py  grc_agent_configs.py  interview_templates.py  personality_agent.py  prompt_components.py  super_agent.py  voice_agent.py
src/api/: main.py
src/api/routes/: agents.py  chat.py  health.py  voice.py
src/classifiers/: hierarchical_classifier.py
src/models/: agent_models.py
src/routing/: routing_strategy.py
src/services/: agent_orchestrator.py  aws_config.py  grc_agent_squad.py  logger.py  memory_service.py  voice_processor.py  websocket_manager.py
src/static/: config.html  index.html
src/tools/: README.md  __init__.py  base_tool.py  external_api_tool.py  interview_guide_tool.py  mcp_client_tool.py  tool_registry.py  tools_registry.py
src/tools/api_tools/: __init__.py  highbond_token_tool.py  user_token.py
src/utils/: config.py  settings.py
tests/: test_runner.py
tests/e2e/: __init__.py  test_aws_connectivity.py  test_grc_agents_e2e.py
tests/integration/: test_api_integration.py  test_chat_integration.py  test_grc_squad_integration.py
tests/unit/: test_agent_orchestrator.py  test_dynamic_config.py  test_health.py
